added try with resources

--- a/alexandr.nevyantsev/projects/SocketClient/pom.xml
+++ b/alexandr.nevyantsev/projects/SocketClient/pom.xml
@@ -9,6 +9,8 @@
     <version>1.0-SNAPSHOT</version>
 
 
-
+    <properties>
+        <build.version>1.8</build.version>
+    </properties>
     
 </project>
