--- a/angelina.gorbachevskaya/MavenChat/pom.xml
+++ b/angelina.gorbachevskaya/MavenChat/pom.xml
@@ -62,6 +62,13 @@
             <version>2.3</version>
         </dependency>
 
+
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.36</version>
+        </dependency>
+
     </dependencies>
 
     <build>
