--- a/vasily.bolgasov/lessons12/serverChat/pom.xml
+++ b/vasily.bolgasov/lessons12/serverChat/pom.xml
@@ -8,6 +8,11 @@
     <artifactId>com.vega.server</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <properties>
+        <hibernate-core.version>5.0.0.Final</hibernate-core.version>
+        <spring.version>4.2.0.RELEASE</spring.version>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
@@ -24,6 +29,18 @@
             <artifactId>spring-context</artifactId>
             <version>4.2.0.RELEASE</version>
         </dependency>
+
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.36</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-core</artifactId>
+            <version>4.0.2.RELEASE</version>
+        </dependency>
+
     </dependencies>
 
     <build>
