Chat - stable version. Working on TODOes; Client-jar, server-war,jar; Tombcat, rest - not finished

--- a/artem.eliseev/lesson15From_Nick/servlet/WEB-INF/web.xml
+++ b/artem.eliseev/lesson15From_Nick/servlet/WEB-INF/web.xml
@@ -14,3 +14,5 @@ http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
         <url-pattern>/servlet</url-pattern>
     </servlet-mapping>
 </web-app>
+
+<!--in browser paste http://localhost:8080/servlet/servlet-->
