--- a/artem.eliseev/Chat_Server_servlet/WEB-INF/web.xml
+++ b/artem.eliseev/Chat_Server_servlet/WEB-INF/web.xml
@@ -11,6 +11,6 @@ http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
 
     <servlet-mapping>
         <servlet-name>Chat_server</servlet-name>
-        <url-pattern>/</url-pattern>
+        <url-pattern>/*</url-pattern>
     </servlet-mapping>
 </web-app>
